delfin-all.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delfin
  labels:
    app: delfin
spec:
  replicas: 3
  selector:
    matchLabels:
      app: delfin
  template:
    metadata:
      labels:
        app: delfin
    spec:
      containers:
        - name: delfin
          image: bakeroni1/delfin
          ports:
            - containerPort: 80
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: delfin
  labels:
    app: delfin
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: delfin
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: delfin-ingress
  annotations:
    traefik.ingress.kubernetes.io/redirect-entry-point: "http"
spec:
  ingressClassName: traefik
  rules:
    - host: delfin.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: delfin
                port:
                  number: 80
